Remove unnecessary DCHECK in BucketOverlapsInterval().

BUG=650585

Review-Url: https://codereview.chromium.org/2378463002
Cr-Commit-Position: refs/heads/master@{#421383}

Former-commit-id: 7d019e768800fe08d9391003702f46622e0bfdab